// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-9xe8te-11 fPXIVT"
      >
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Index Name
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Type
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Uniqueness
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                EntityType
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                LabelsOrTypes
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Properties
              </th>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-bf850j-1 iGjwRr table-row"
            >
              <td
                class="DataTables__StyledTd-bf850j-3 lfnTDs table-properties"
              >
                None
              </td>
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-bf850j-2 ikUpyS table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-bf850j-1 iGjwRr table-row"
            >
              <td
                class="DataTables__StyledTd-bf850j-3 lfnTDs table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-9xe8te-11 fPXIVT"
      >
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-bf850j-2 ikUpyS table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-bf850j-2 ikUpyS table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
            >
              <td
                class="table-properties DataTables__StyledTd-bf850j-3 lfnTDs"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="styled__StyledSlide-sc-9xe8te-11 fPXIVT"
      >
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="DataTables__StyledTh-bf850j-2 ikUpyS table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-bf850j-1 iGjwRr table-row"
            >
              <td
                class="DataTables__StyledTd-bf850j-3 lfnTDs table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="DataTables__StyledTable-bf850j-0 cZayOW"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="table-header DataTables__StyledTh-bf850j-2 ikUpyS"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="DataTables__StyledBodyTr-bf850j-1 iGjwRr table-row"
            >
              <td
                class="DataTables__StyledTd-bf850j-3 lfnTDs table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
